# open-weather-etl-pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: .env  airflow.cfg
dags/: weather_data_dag.py
data/: temp_data.parquet  weather_data.json
notebooks/: data_analysis.ipynb
src/: extract_data.py  load_data.py  transform_data.py
